--- a/package.json
+++ b/package.json
@@ -4,19 +4,30 @@
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
   "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/mocha/bin/mocha",
     "start": "node server/index.js",
-    "local": "./node_modules/.bin/nodemon --watch server -e js server/index.js"
+    "local": "nodemon --watch server -e js server/index.js"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.2",
     "chance": "^1.0.2",
-    "express": "^4.13.4",
+    "express": "^4.17.1",
     "md5": "^2.1.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.1",
     "nodemon": "^1.9.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HatHeadNinja/tweeter.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/HatHeadNinja/tweeter/issues"
+  },
+  "homepage": "https://github.com/HatHeadNinja/tweeter#readme"
 }
