--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A twitter clone by Lighthouse Labs for web bootcamp students to learn front-end dev skillz",
   "main": "server/index.js",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha",
+    "test": "node ./node_modules/mocha/bin/mocha --watch",
     "start": "node server/index.js",
-    "local": "nodemon --watch server -e js server/index.js"
+    "local": "node ./node_modules/nodemon/bin/nodemon --watch server/index.js"
   },
   "author": "Lighthouse Labs",
   "license": "ISC",
@@ -15,12 +15,14 @@
     "chance": "^1.0.2",
     "express": "^4.17.1",
     "md5": "^2.1.0",
-    "moment": "^2.27.0"
+    "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31"
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "dotenv-quokka-plugin": "^1.0.0",
     "mocha": "^8.1.1",
-    "nodemon": "^1.9.2"
+    "nodemon": "^2.0.4"
   },
   "repository": {
     "type": "git",
